# summer-code-jam-2021

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  avatar.py  build.sh  cursor.py  dev-requirements.txt  game.py  leaderboard.txt  levels.py  load_data.py  main.py  requirements.txt  setup.cfg  setup.py  utilities.py  utils.py
.github/workflows/: codeql-analysis.yml  lint.yaml
core/: ascii2map.py  character.py  cursor.py  maze.py  maze.py.5efef078059f6ffe15303df76826febc.tmp  player.py  render.py  sound.py  table.py
dev/: ascii2map.py
levels/: 0.json  1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
levels/1/: box_1.txt  info.json  map.txt  maptrix.json
screen/: character.py  screen.py  widget.py
src/maze_gitb/: __main__.py  game.py  leaderboard.txt  main.py  scene.py
src/maze_gitb/core/: character.py  maze.py  player.py  render.py  sound.py  table.py
src/maze_gitb/levels/: 0.json  1.json  8.json
