[metadata]
name=maze_gitb  # temp name
version=0.1a9
license=MIT
description=A maze game that required users to think inside the box to win
long_description=long_description
long_description_content_type=text/markdown
author=Benevolent Bonobos
author_email=jasonho1308@gmail.com
url=https://github.com/Anand1310/summer-code-jam-2021
project_urls=
    Bug Tracker: https://github.com/Anand1310/summer-code-jam-2021/issues

download_url=https://github.com/Anand1310/summer-code-jam-2021/archive/v_01.tar.gz
keywords=
    game
    maze
    box
    think inside the box
    sound
    3d-sound

classifiers=
    Development Status :: 5 - Production/Stable
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Programming Language :: Python :: 3
    Topic :: Games/Entertainment :: Puzzle Games
include_package_data=True


[options]
package_dir = src
packages = find:
python_requires = >=3
install_requires=
    blessed>=1.18.1
    numpy>=1.21.0
    pyperclip>=1.8.2
    PyOpenAL>=0.7.11a1

[options.entry_points]
console_scripts =
    maze_gitb = maze_gitb.main:main
[options.packages.find]
where = src
